--- a/style.css
+++ b/style.css
@@ -1,62 +1,128 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 * {
-    font-family: 'poppins';
-    margin: 0;
-    padding: 0;
+  font-family: "poppins";
+  font-weight:500;
+  margin: 0;
+  padding: 0;
 }
 body {
-    background-color: #e5eaf5;
+  background-color: #e5eaf5;
 }
 h1 {
-    margin-top: 15px;
-    font-size: 4.5em;
-    font-weight: 40px;
-    display: flex;
-    justify-content: center;
+  font-weight: 800;
+  margin-top: 15px;
+  font-size: 72px;
+  font-weight: 40px;
+  display: flex;
+  justify-content: center;
 }
 .container {
-    position: absolute;
-    background-color: rgb(255, 255, 255);
-    margin-left: 28.2%;
-    display: flex;
-    flex-wrap: wrap;
-    width: 620px;
-    height: 620px;
-    border: 2px solid #cfd7e8;
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  margin-left: 28%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 620px;
+  height: 620px;
+  border: 2px solid #cfd7e8;
 }
 .rows {
-    box-sizing: border-box;
-    border: 1px solid #e5eaf5;
+  box-sizing: border-box;
+  border: 1px solid #e5eaf5;
 }
 .buttons-container {
-    margin-top: 8%;
+  margin-top: 2em;
 }
 .buttons {
-    background-color: #dcdcdc;
-    display: flex;
-    border-radius: 15px;
-    margin-bottom: 35px;
-    margin-left: 7%;
-    flex-wrap: wrap;
-    font-size: 18px;
-    justify-content: center;
-    width: 15%;
-    height: 15%;
-    padding: 15px;
-    border: 1px solid #e5eaf5;
+  background-color: #e5eaf5;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  border-radius: 15px;
+  margin-bottom: 25px;
+  margin-left: 7%;
+  flex-wrap: wrap;
+  font-size: 18px;
+  justify-content: center;
+  width: 15%;
+  height: 15%;
+  padding: 10px;
+  border: 1px solid;
 }
-#favcolor {
-    #favcolor {
-        appearance: none; /* Removes default button styling */
-        background-color: #dcdcdc; /* Sets the button color */
-        border: none; /* Removes any borders */
-        border-radius: 50%; /* Makes it perfectly round */
-        width: 110px; /* Maintains round shape */
-        height: 110px; /* Maintains round shape */
-        outline: none; /* Removes focus outline */
-        box-shadow: none; /* Ensures no shadows are added */
-        padding: 0; /* Prevents any inner padding */
-        margin: 0; /* Prevents any external spacing */
-    }
-    
+#color-picker {
+    margin-top: 2.1em;
+  cursor: pointer;
+  position: relative;
+  appearance: none;
+  background: none;
+  border: none;
+  width: 110px;
+  height: 110px;
+}
+.itemcenter {
+    flex: 0 1 auto;
+    width: 110px;
+    height: 110px;
+    position: relative;
+    /* new */
+    left: 10%;
+    transform: translateX(-80%);
+}
+input[type="color"] {
+  /* Styles the input container */
+  width: 96px;
+  height: 96px;
+  border: none;
+  border-radius: 50%;
+  overflow: hidden;
+  padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+  /* Styles the wrapper around the swatch */
+  padding: 0;
+  border: none;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+  /* Styles the wrapper around the swatch */
+  padding: 0;
+  border: none;
+}
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 14.6%;
+  height: 17px;
+  border-radius: 5px;  
+  background: rgb(253, 253, 253);
+  outline: none;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  transform: translateX(49%);
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%; 
+  background: #2f2f2f;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #2f2f2f;
+  cursor: pointer;
+}
+#demo {
+  margin-left: 9.8em;
+  font-size: larger;
 }
