--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@ h1 {
 .container {
   position: absolute;
   background-color: rgb(255, 255, 255);
-  display: flex;
-  flex-wrap: wrap;
   width: 620px;
   height: 620px;
   border: 2px solid #cfd7e8;
@@ -128,4 +126,11 @@ input[type="color"]::-webkit-color-swatch-wrapper {
 #demo {
   margin-left: 9.8em;
   font-size: larger;
+}
+.innercontainer {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
 }
