Completed the project

--- a/style.css
+++ b/style.css
@@ -51,15 +51,15 @@ h1 {
   border: 1px solid;
   transition: background-color 0.3s, color 0.3s;
 }
+.color-mode {
+  color: #e5eaf5;
+  background-color: #2f2f2f;
+}
 
 buttons:hover {
   background-color: #2f2f2f;
 }
 
-buttons.active {
-  background-color: #2f2f2f;
-  color: #e5eaf5;
-}
 #color-picker {
     margin-top: 2.1em;
   cursor: pointer;
